# docker_nuc_mulinex

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  wp.py  wp_create.py
docker/: DockerFile  build.bash  compose.yaml  ros_prompt.sh  run.bash
docker/.config/: PlotJuggler-3.ini  entrypoint.sh
src/ik_controller/: package.xml  setup.py
src/ik_controller/config/: ik_controller_params.yaml
src/ik_controller/ik_controller/: ik_controller.py
src/ik_controller/launch/: ik_controller.launch.py
src/omni_bringup/: README.md  package.xml  setup.cfg  setup.py
src/omni_bringup/launch/: omni_bringup.launch.py
src/omni_bringup/omni_bringup/: nuc_heartbeat_node.py
src/omni_gazebo/: CMakeLists.txt  package.xml
src/omni_gazebo/config/: omnicar_sim.yaml  omniquad12_sim.yaml
src/omni_gazebo/launch/: gz_sim.launch.py
src/omni_mulinex_joystic/launch/: start_joystic_nodes.launch.py
src/omni_mulinex_joystic/src/: omnimul_joy.cpp
src/omni_mulinex_joystick/: CMakeLists.txt  package.xml
src/omni_mulinex_joystick/config/: joystick_params.yaml  joystick_params_pan_tilt.yaml
src/omni_mulinex_joystick/include/omni_mulinex_joystick/: omni_mulinex_joystick.hpp
src/omni_mulinex_joystick/launch/: joystick.launch.py
src/omni_mulinex_joystick/scripts/: getup_omni.py
src/omni_mulinex_joystick/src/: main.cpp  omni_mulinex_joystick.cpp
src/omni_utils/: CMakeLists.txt  package.xml
src/omni_utils/include/omni_utils/: quat_math.h
src/omnicar_test/: package.xml  setup.cfg  setup.py
src/omnicar_test/launch/: omnicar_full_test.launch.py
src/omnicar_test/omnicar_test/: linear_traj.py  omnicar_test_node.py
src/omnirace_bringup/: package.xml  setup.cfg  setup.py
src/omnirace_bringup/config/: twist_mux.yaml
src/omnirace_bringup/launch/: omnirace_bringup.launch.py  omnirace_bringup_joy.py  omnirace_sim.launch.py
src/omnirace_bringup/omnirace_bringup/: demo_run_node.py
src/omnirace_bringup/worlds/: waypoints.sdf
src/pi3hat_moteus_int_msgs/: CMakeLists.txt  package.xml
src/pi3hat_moteus_int_msgs/msg/: Counter.msg  JointsStates.msg
src/robot_model/: CMakeLists.txt  package.xml
src/robot_model/include/robot_model/: robot_wrapper.hpp
src/robot_model/robot_model/: robot_wrapper.py
src/robot_model/robots/: all_robots.yaml
src/robot_model/src/: robot_wrapper.cpp
src/teleop_mulinex/: CMakeLists.txt  package.xml
src/teleop_mulinex/include/teleop_mulinex/: keyboard_reader.hpp
src/teleop_mulinex/launch/: teleop_mulinex.launch.py
src/teleop_mulinex/src/: main.cpp  teleop_mulinex_node.cpp  teleop_mulinex_node.hpp
