<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>omnirace_bringup</name>
    <version>0.0.0</version>
    <description>Bringup launch package for the Mulinex omnirace stack with joystick teleop and twist muxing.</description>
    <maintainer email="tolomei.simone5@gmail.com">Simone Tolomei</maintainer>
    <license>TODO: License declaration</license>

    <author email="tolomei.simone5@gmail.com">Simone Tolomei</author>

    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>omni_mulinex_joystick</exec_depend>
    <exec_depend>twist_mux</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
